# textformats

./: .gitignore  CHANGELOG.txt  CITATION.cff  README.md  TODO  textformats.nimble
python/: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py  textformats.nim.cfg  textformats_manual.Python-API.md
python/benchmarks/: .gitignore  Makefile  decode_lines.py  parse_cigars.py  parse_cigars_python.sh  parse_cigars_textformats.sh
python/benchmarks/cigars/: .gitignore  Makefile  ad_hoc.py  opstats.py  textformats_based.py
python/benchmarks/sam/: .gitignore  Makefile  counts.py  htslib_based.py  textformats_based.py
python/examples/: example.bindings.py  example.oop.py  gfa2_tests_api.sh  large_example.py  small_example.py  tags_tests_api.sh
python/examples/egc/: .gitignore  Makefile  README.md  egc.yaml  egc2json.py  egc2json_ad_hoc.py  egc_ad_hoc.py  example.egc  json2egc.py  json2egc_ad_hoc.py  run_example.sh
python/examples/fix_gfa/: complete_graph.gfa  corrupted_gfa.yaml  fix_gfa.py  reduce.sh  subgraph.gfa
python/examples/ftab_to_gff3/: ctg123.ftab  ftab.yaml  ftab_to_gff3.py  run_example.sh
python/examples/gfa1_fix/: .gitignore  Makefile  gfa1_fix.py  gfa1_show_invalid_lines.py  invalid_gfa1.yaml
python/examples/gfa2_info/: .gitignore  Makefile  gfa2_info.py  (+7 more)
python/py_bindings/: .gitignore  py_bindings.nimble
python/tests/: .gitignore  conftest.py  example.bindings.py  example.oop.py  gfa2_tests_api.sh  spec_tests_apibased.py  tags_tests_api.sh  test_textformats_py.py
python/textformats/: __init__.py  error.py  textformats.py
(+617 files in other folders)
