[metadata]
name = textformats
version = 1.2.1
description = Simple definition and parsing of text formats
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/ggonnella/textformats
keywords = text, textformats, formats, fileformats, bioinformatics, genomics, sequences, science
author = Giorgio Gonnella
author_email = gonnella@zbh.uni-hamburg.de
license = ISC
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: ISC License (ISCL)
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = textformats
tests_requires =
  nose

[options.package_data]
* =
  *.so
